--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,112 @@
-h1 {
-  color: red;
+* {
+	font-family: 'Lato', 'Noto Sans KR', sans-serif;
+	word-break: keep-all;
+	padding: 0;
+	margin: 0;
+	outline: 0;
+	box-sizing: border-box;
+}
+
+/* reset */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
+}
+
+body {
+  background-color: black;
+}
+
+.container {
+  width: 30%;
+  min-width: 600px;
+  height: 100vh;
+  background-color: #F5EDDC;
+  margin: 0 auto;
+  bg
+}
+
+.banner-section {
+  height: 250px;
+  background-image: url("https://images.unsplash.com/photo-1644329843491-99edfc83de04?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80");
+  background-position: bottom;
+  background-size: cover;
 }
 
 input {
@@ -7,17 +114,48 @@ input {
 }
 
 button {
+  display: inline-block;
+  border: none;
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  background: #F5EDDC;
+  color: #999;
   cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, 
+              transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+button:hover,
+button:focus {
+  background: rgba(255,255,255,0.2);
+  color: #D6CDA4;
 }
 
 .list-wrap {
-  max-width: 300px;
+  width: 77%;
+  margin: 0 auto;
+  margin-top: 50px;
 }
 
 .item-wrap, .todo-wrap {
+  height: 65px;
+  margin-top: 20px;
+  padding: 0 20px;
+  background-color: rgba(255,255,255,0.4);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 2px solid #D6CDA4;
+  border-radius: 15px;
+}
+
+.item-wrap, .todo-wrap > h2 {
+  font-size: 16px;
+  color: #D6CDA4;
 }
 
 .item-wrap > input {
@@ -30,4 +168,8 @@ button {
 
 .todo-wrap > .checked {
   text-decoration: line-through;
+}
+
+.todo-wrap > button {
+  margin: 50px;
 }
